crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_namespace_groupuseerrors_3.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "Foo",
                  "Bar"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 32,
                  "end": 41
                }
              },
              "alias": null,
              "span": {
                "start": 37,
                "end": 41
              }
            }
          ]
        }
      },
      "span": {
        "start": 28,
        "end": 43
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 43
  }
}
