crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_namespace_notbraced.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "Foo",
              "Bar"
            ],
            "kind": "Qualified",
            "span": {
              "start": 17,
              "end": 24
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 7,
        "end": 26
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "foo"
          },
          "span": {
            "start": 26,
            "end": 29
          }
        }
      },
      "span": {
        "start": 26,
        "end": 32
      }
    },
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "Bar"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 42,
              "end": 45
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 32,
        "end": 47
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "bar"
          },
          "span": {
            "start": 47,
            "end": 50
          }
        }
      },
      "span": {
        "start": 47,
        "end": 51
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 51
  }
}
