crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_namespace_nsafterhashbang.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "A"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 36,
              "end": 37
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 26,
        "end": 38
      }
    }
  ],
  "span": {
    "start": 19,
    "end": 38
  }
}
